# OpenCVProjectTemplate

./: .gitignore  CMakeLists.txt
src/: main.cpp
